2017-05-15 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_prefork_mpm.c: server root 
    interpreter needs to re-seed the random number generator

2017-05-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: apply Damon's patch concerning
    some tests and error handling. Removed call to the
    undocumented procedure ::Rivet::cleanup_request
    * configure.ac: better wording of some configure
    messages

2017-04-07 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: Fixed bug
    in argument list passed to RivetCache_MakeKey

2017-04-06 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_lazy_mpm.c: server_rec
    argument in error logging changed to global
    root server. Passing the virtual host server rec 
    makes the call to ap_log_error quiet and
    if something goes wrong in the thread's Tcl interp
    initialization we don't read anything!

2017-04-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/formbroker.xml: better wording of a few
    concepts. Add documentation for the boolean data type
    * doc/xml/internals.xml: fixed incomplete sentence

2017-02-10 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: now
    handling natively also boolean in the form y|n or
    0|1

2017-02-01 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: defining and substituting
    RIVETLIB_VERSION
    * rivet/init.tcl.in: the ::rivet namespace is
    created already in src/mod_rivet_ng/mod_rivet_common.c
    Package rivetlib is loaded here now 
    * src/mod_rivet_ng/mod_rivet_common.c: in
    function Rivet_PerInterpInit more code is 
    devolved to the Tcl initialization

2017-01-18 Massimo Manghi <mxmanghi@apache.org>
    * doc/Makefile.am: integration of the automake
    infrastructure and rules
    * src/Makefile.am: removed prefixing of
    library names with DESTDIR

2017-01-17 Massimo Manghi <mxmanghi@apache.org>