@@ -12,24 +12,27 @@
     <!ENTITY download.tcl	        SYSTEM	"examples-sgml/download.tcl" >
     <!ENTITY rivet_web_service.tcl SYSTEM "examples-sgml/rivet_web_service.tcl" >
     <!ENTITY intro.xml		        SYSTEM "xml/intro.xml" >
-    <!ENTITY install.xml	        SYSTEM "xml/install.xml" >
-    <!ENTITY directives.xml	     SYSTEM "xml/directives.xml" >
-    <!ENTITY commands.xml          SYSTEM "xml/commands.xml" >
-    <!ENTITY examples.xml          SYSTEM "xml/examples.xml" >
-    <!ENTITY packages.xml          SYSTEM "xml/packages.xml" >
-    <!ENTITY dio.xml               SYSTEM "xml/dio.xml" >
-    <!ENTITY diodisplay.xml        SYSTEM "xml/diodisplay.xml" >
-    <!ENTITY session.xml           SYSTEM "xml/session.xml" >
-    <!ENTITY form.xml              SYSTEM "xml/form.xml" >
-    <!ENTITY calendar.xml          SYSTEM "xml/calendar.xml" >
-    <!ENTITY help.xml              SYSTEM "xml/help.xml" >
-    <!ENTITY internals.xml         SYSTEM "xml/internals.xml" >
-    <!ENTITY upgrade.xml           SYSTEM "xml/upgrade.xml" >
-    <!ENTITY request.xml           SYSTEM "xml/request.xml" >
-    <!ENTITY entities.xml          SYSTEM "xml/entities.xml" >
-    <!ENTITY asciiglyphs.xml		  SYSTEM "xml/asciiglyphs.xml" >
-    <!ENTITY lazybridge.xml		  SYSTEM "xml/lazybridge.xml" >
-    <!ENTITY formbroker.xml        SYSTEM "xml/formbroker.xml" >
+    <!ENTITY install.xml	        SYSTEM "xml-2/install.xml" >
+    <!ENTITY directives.xml	     SYSTEM "xml-2/directives.xml" >
+    <!ENTITY commands.xml          SYSTEM "xml-2/commands.xml" >
+    <!ENTITY examples.xml          SYSTEM "xml-2/examples.xml" >
+    <!ENTITY packages.xml          SYSTEM "xml-2/packages.xml" >
+    <!ENTITY dio.xml               SYSTEM "xml-2/dio.xml" >
+    <!ENTITY diodisplay.xml        SYSTEM "xml-2/diodisplay.xml" >
+    <!ENTITY session.xml           SYSTEM "xml-2/session.xml" >
+    <!ENTITY form.xml              SYSTEM "xml-2/form.xml" >
+    <!ENTITY calendar.xml          SYSTEM "xml-2/calendar.xml" >
+    <!ENTITY help.xml              SYSTEM "xml-2/help.xml" >
+    <!ENTITY internals.xml         SYSTEM "xml-2/internals.xml" >
+    <!ENTITY upgrade.xml           SYSTEM "xml-2/upgrade.xml" >
+    <!ENTITY request.xml           SYSTEM "xml-2/request.xml" >
+    <!ENTITY entities.xml          SYSTEM "xml-2/entities.xml" >
+    <!ENTITY asciiglyphs.xml		  SYSTEM "xml-2/asciiglyphs.xml" >
+    <!ENTITY lazybridge.xml		  SYSTEM "xml-2/lazybridge.xml" >
+    <!ENTITY formbroker.xml        SYSTEM "xml-2/formbroker.xml" >
+    <!ENTITY version	"3.0" >
+    <!ENTITY fullversion "3.0.0" >
+
 ]>
 
 <!--
@@ -54,21 +57,7 @@
   <articleinfo>
     <title>Apache Rivet</title>
     <copyright>
-        <year>2002</year>
-        <year>2003</year>
-        <year>2004</year>
-        <year>2005</year>
-        <year>2006</year>
-        <year>2007</year>
-        <year>2008</year>
-        <year>2009</year>
-        <year>2010</year>
-        <year>2011</year>
-        <year>2012</year>
-        <year>2013</year>
-        <year>2014</year>
-        <year>2015</year>
-        <year>2016</year>
+        <year>2002-2017</year>
         <holder>Apache Software Foundation</holder>
     </copyright>
     <author>
