@@ -1,0 +1,45 @@
+<section id="introduction">
+    <title>Introduction to Apache Rivet</title>
+    <para>
+      Apache Rivet is a system for creating dynamic web content via a
+      programming language integrated with Apache Web Server.  It is
+      designed to be fast, powerful and extensible, consume few system
+      resources, be easy to learn, and to provide the user with a
+      platform that can also be used for other programming tasks
+      outside the web (GUI's, system administration tasks, text
+      processing, database manipulation, XML, and so on).  In order to
+      meet these goals, we have chosen the Tcl programming language to
+      combine with the Apache Web Server.
+    </para>
+    <para>
+      In this manual, we aim to help get you started, and then
+      writing productive code as quickly as possible, as well as
+      giving you ideas on how to best take advantage of Rivet's
+      architecture to create different styles of web site.
+    </para>
+    <para>
+        This documentation is focused on the current version of Rivet, but
+        still a work in progress, and, like everything
+        else about Apache Rivet, it is Free Software.  If you see
+        something that needs improving, and have ideas or suggestions,
+        don't hesitate to let us know.  If you want to contribute
+        directly, better yet!
+    </para>
+    
+    <simplesect>
+        <title>Introduction</title>
+        <para>
+	        	Rivet 3.0 ships with a major rewriting of mod_rivet, the Apache HTTP
+	        	Websever module at the core of Rivet. With this version of the module
+	        	we attained full support of different MPM (Multiprocessing Modules) for
+	        	the Apache framework, whereas previous version of mod_rivet only supported
+	        	the prefork MPM.
+        </para>
+        <!-- itemizedlist>
+    			<listitem>
+    			</listitem>
+         	<listitem>
+         	</listitem>
+		 </itemizedlist -->
+    </simplesect>
+</section>
